--- a/templates/post/index.html
+++ b/templates/post/index.html
@@ -51,32 +51,41 @@
         <div class="items">
         <div class="service-one" id="service-card">
              <h3>web development</h3>
+             <div class="image-wrapper">
             <img src="{% static 'img/glenn-carstens-peters-npxXWgQ33ZQ-unsplash.jpg'   %}"   >
-            
+            </div>
         </div>
         </div>
         <div class="items">
         <div class="service-two"  id="service-card">
             <h3>Data proccessing and analytics</h3>
-            <img src="{% static 'img/luke-chesser-JKUTrJ4vK00-unsplash.jpg'   %}"  >
+            <div class="image-wrapper">
+            <img src="{% static 'img/luke-chesser-JKUTrJ4vK00-unsplash.jpg'   %}">
+            </div>
         </div>
         </div>
         <div class="items">
         <div class="service-three" id="service-card" >
             <h3>mobile app development</h3>
-            <img src="{% static 'img/balazs-ketyi-sScmok4Iq1o-unsplash.jpg' %}"   >
+            <div class="image-wrapper">
+            <img src="{% static 'img/balazs-ketyi-sScmok4Iq1o-unsplash.jpg' %}" >
+            </div>
         </div>
         </div>
         <div class="items">
         <div class="service-four" id="service-card" >
             <h3>graphics designing</h3>
+            <div class="image-wrapper">
             <img src="{% static 'img/emily-bernal-v9vII5gV8Lw-unsplash.jpg'   %}" >
+            </div>
         </div>
         </div>
         <div class="items">
         <div class="service-five" id="service-card">
             <h3>digital marketing</h3>
+            <div class="image-wrapper">
             <img src="{% static 'img/marketing.jpg'   %}"  >
+            </div>
         </div>
     </div>
     </div>
@@ -99,31 +108,39 @@
         <div class="item">
             <img src="{% static 'img/icon.png' %}" >
 
-                <h3>Aakash Basnet</h3>
-                <p>I really liked their service as they are providing high 
-                    quality software products  at a reasonable rate
-                </p>
+                <h3>Mr.Aakash Basnet</h3>
+             <p><q>As a growing business seeking advanced technological solutions,
+                     we turned to [IT Company Name] for their expertise. 
+                     We were astounded by their unparalleled services, innovative strategies,
+                     and unwavering commitment to excellence.</q></p>
+                
+                <p style="text-transform: capitalize;">- senior mechanical engineer</p>
         </div>
         <div class="item">
             <img src="{% static 'img/icon.png' %}" >
-            <h3>Binay Thapa</h3>
-            <p>I really liked their service as they are providing high 
-                quality software products  at a reasonable rate
+            <h3>Mr. Binay Thapa</h3>
+            <p><q>I We were not just another client; they truly cared about our success. 
+                The continuous support, proactive maintenance, 
+                and their readiness to address any concerns
+                 cemented our trust in their capabilities.</q>
             </p>
+            <p style="text-transform: capitalize;">- senior software engineer</p>
         </div>
         <div class="item">
             <img src="{% static 'img/icon.png' %}" >
-            <h3>Rojin Shrestha</h3>
-            <p>I really liked their service as they are providing high 
-                quality software products at a reasonable rate
+            <h3>Mr. Rojin Shrestha</h3>
+            <p><q>Highly recommended for any company seeking top-notch IT solutions and a reliable, 
+                forward-thinking partner in their success.</q>
             </p>
+            <p style="text-transform: capitalize;">- senior software engineer</p>
         </div>
         <div class="item">
             <img src="{% static 'img/icon.png' %}" >
-            <h3>Shristi adhikari</h3>
-            <p>I really liked their service as they are providing high 
-                quality software products  at a reasonable rate
+            <h3>Ms. Shristi adhikari</h3>
+            <p><q>I really had a great experience working with them as they deliver high quality product 
+                at  an affordable price.</q>
             </p>
+            <p style="text-transform: capitalize;">- senior electronics engineer</p>
         </div>
        
       
