--- a/templates/post/index.html
+++ b/templates/post/index.html
@@ -163,8 +163,10 @@
     <div id="contactform">
         <form action="{% url 'home' %}" method="post">
             {% csrf_token %}
-            {{ form|crispy}} 
-            <input type="submit" value="Submit">
+
+            {{form|crispy}}
+            <button type="submit">submit</button>
+         
         </form>
 
         
